@@ -63,8 +63,29 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.session:spring-session-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
+    
+    //nGinder
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+
+    testLogging {
+        showStandardStreams = true  // System.out.println 출력 허용
+        events "passed", "skipped", "failed" // 테스트 통과/실패 여부도 로그에 찍힘
+    }
+}
+
+// Spring Boot 애플리케이션 JVM 설정 (ZGC + GC 로그)
+bootRun {
+    jvmArgs = [
+        '-Xmx2g',
+        '-Xms2g',
+        '-XX:+UseZGC',
+        '-XX:+ZGenerational',
+        // '-Xlog:gc*:file=gc.log:time,uptime,level,tags:filecount=5,filesize=10m', // gc.log 파일 생성
+        '-XX:+HeapDumpOnOutOfMemoryError'
+    ]
 }
